# Bonsai-Image-Demo

./: .gitignore  README.md  pyproject.toml  setup.ps1  setup.sh
.github/: CI.md
.github/workflows/: smoke-tests.yml
notebooks/: bonsai_image_colab.ipynb
scripts/: check_image.py  common.ps1  common.sh  download_model.ps1  download_model.sh  generate.ps1  generate.py  generate.sh  load_test.py  local_backend.py  local_backend_mac.py  send_request.ps1  send_request.sh  serve.ps1  serve.sh  windows.md
